# of_driving

./: CMakeLists.txt  CMakeLists.txt~  package.xml
NAOqi-OnlineVersion/potentialNavigationNAO/: CMakeLists.txt  of_driving.cpp  potentialNavigationNAO.cpp  potentialNavigationNAO.h
NAOqi-OnlineVersion/testNAOqi/: CMakeLists.txt  main.cpp  qiproject.xml
launch/: Farneback_of_driving.launch  Farneback_of_driving.launch~  LK_of_driving.launch  of_driving_raw.launch~  of_driving_vrep.launch~  of_driving_vrep320x240.launch~  of_driving_vrep640x480.launch  of_driving_vrep640x480.launch~  realFarneback_of_driving.launch  realFarneback_of_driving.launch~  real_scene.launch  simFarneback_of_driving.launch  simFarneback_of_driving.launch~  sim_scene.launch
src/: image_converter.cpp  image_converter.h  main.cpp  of_driving.cpp  of_driving.h  parallel_process.cpp  parallel_process.h
vrep_scenes/: 2corridors_optical_flow_scene.ttt  DRC_driving_realScene.ttt  DRC_driving_realSceneFinals.ttt  DRC_driving_scene.ttt  clean_corridor_optical_flow_scene.ttt  corridor_optical_flow_scene.ttt  obstacle_corridor_optical_flow_scene.ttt  optical_flow_driving_scene.ttt  roadguardtx_optical_flow_driving_scene.ttt  roadtx_optical_flow_driving_scene.ttt
